src/test/deca/syntax/parser/invalid/list_class_after_main.deca
// Test parser, la liste des classes est avant le EmptyMain

{
    int x = 5;
}

class A {

}